# ===================== begin_copyright_notice ============================
#
# Copyright (C) 2023-2026 Intel Corporation
#
# SPDX-License-Identifier: MIT
#
# ===================== end_copyright_notice ==============================

add_subdirectory(configuration)
add_subdirectory(hud)
add_subdirectory(imgui_common)
add_subdirectory(log)
add_subdirectory(legacy)
